<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Heart Monitor</string>
    <string name="title_section1">Home</string>
    <string name="title_section2">User Settings</string>
    <string name="title_section3">Reports</string>
    <string name="title_section4">Help</string>
    <string name="title_section5">ECG Test</string>
    <string name="ecg">Start ECG</string>
    <string name="reports">Reports</string>
    <string name="user_settings">User Settings</string>
    <string name="help">Help</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_splash_screen">Welcome to the Heart Monitor v.1</string>
    <string name="user_name">Full Name: </string>
    <string name="user_phone">Phone Number: </string>
    <string name="user_email">Email Address: </string>
    <string name="user_submit">Submit</string>
    <string name="user_nemergency">Name</string>
    <string name="user_pemergency">Phone</string>
    <string name="user_eemergency">Email</string>

    <string name="home_fragment">Welcome</string>
    <string name="user_fragment">User Settings</string>
    <string name="report_fragment">Reports</string>
    <string name="help_fragment">Help</string>
    <string name="title_activity_test">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ecg">ECG</string>
    <string name="title_activity_analyze_ecg">Analyze ECG</string>
    <string name="title_activity_display_ecg">Display ECG</string>
    <string name="title_activity_user2">User2</string>
    <string name="title_activity_user_data">UserData</string>
    <string name="welcome">Welcome back!</string>
    <string name="title_activity_ecg_graph">ecg_graph</string>
    <string name="start_button">Start/Restart</string>
    <string name="back_button">Back</string>
    <string name="cancel_button">Cancel</string>
    <string name="ecg_button">Run ECG</string>
    <string name="user_info_button">User Information</string>
    <string name="quit_button">Quit</string>
    <string name="stop_button">Stop</string>
    <string name="check_signal_button">Check Signal Strength</string>
    <string name="share_button">Share</string>
    <string name="delete_button">Delete</string>
    <string name="submit_button">Submit</string>
    <string name="store_button">Store Reading</string>
    <string name="chose_file_button">Choose File</string>
    <string name="title_activity_user_info">user_info</string>
    <string name="user_title">User Information</string>
    <string name="device_selected">Heart Sensor:</string>
    <string name="store_reading">Save</string>
    <string name="select_sensor">Please select sensor device</string>
<!--<<<<<<< HEAD-->
    <string name="files_stored">Stored ECG Recordings</string>
    <string name="title_activity_view_recording">ViewRecording</string>
    <string name="home_screen_checklist">Pretest ECG Checklist</string>
    <string name="home_screen_checklist_item1">1) Turn sensor on</string>
    <string name="home_screen_checklist_item2">2) Pair phone with sensor</string>
    <string name="home_screen_checklist_item3">3) Connect ECG leads</string>
    <string name="home_screen_checklist_item4">4) Sit or lay down</string>
<!--=======-->
    <string name="title_activity_pref_user">PrefUser</string>
    <string name="analyzing_data">Analyzing Data</string>
    <string name="file_name_holder">FILE NAME GOES HERE</string>
    <string name="analysis_messages_holder">Analysis Messages Go Here</string>
    <!-->>>>>>>> origin/combined-->

</resources>
