<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.und.cs.com.heart_monitor.ViewRecording"
    android:orientation="vertical"
    android:id="@+id/mainLYT">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="196dp"
        android:layout_weight="0.24"
        android:background="#ffffff"
        android:layout_marginTop="20dp">

        <com.jjoe64.graphview.GraphView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/graphLayout" />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/file_name_holder"
        android:id="@+id/txtFileName"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15dp" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/analysis_messages_holder"
        android:id="@+id/txtWarningMessages"
        android:layout_marginBottom="15dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:actionProviderClass="android.widget.ShareActionProvider"
            android:text="@string/store_reading"
            android:id="@+id/storeBTN"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/deleteBTN"
            android:text="@string/delete_button"
            android:layout_marginBottom="20dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_button"
            android:id="@+id/backBTN" />
    </LinearLayout>

</LinearLayout>